--- a/bkmonitor/webpack/src/trace/pages/failure/failure-header/failure-header.scss
+++ b/bkmonitor/webpack/src/trace/pages/failure/failure-header/failure-header.scss
@@ -63,10 +63,26 @@
     font-size: 12px;
 
     .info-id {
-      display: block;
-      width: 100%;
+      height: 14px;
+      display: flex;
+      align-items: center;
       margin-top: 3px;
       color: #979ba5;
+
+      .temporary-share-new {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        margin-left: 5px;
+
+        .icon-mc-share {
+          font-size: 14px;
+          color: #3a84ff;
+          cursor: pointer;
+        }
+      }
+
+
     }
 
     .info-name {
@@ -181,6 +197,7 @@
 
     .header-group-btn {
       color: #313238;
+
       .btn-icon {
         color: #63656e;
       }
@@ -242,6 +259,7 @@
     }
   }
 }
+
 .header-status-popover {
   .bk-pop2-arrow {
     left: 16px !important;
