--- a/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-retrieval-filter/alarm-retrieval-filter.scss
+++ b/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-retrieval-filter/alarm-retrieval-filter.scss
@@ -1,7 +1,17 @@
+/* stylelint-disable selector-class-pattern */
 .alarm-center__alarm-retrieval-filter-component {
   .vue3__space-select-component {
+    align-self: stretch;
     width: auto;
-    height: 48px;
+    height: auto;
+    min-height: 48px;
     border: none;
+  }
+
+  .selector-trigger-space-select {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
   }
 }
