--- a/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-table/components/alert-content-detail/alert-content-detail.scss
+++ b/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-table/components/alert-content-detail/alert-content-detail.scss
@@ -1,94 +1,72 @@
 .alert-content-detail {
   z-index: 2;
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
   width: 480px;
   padding: 12px;
   background-color: white;
 
-  .alert-content-description {
+  .description-meaning {
     display: flex;
-    flex-direction: column;
-    row-gap: 4px;
+    min-height: 26px;
+    line-height: 20px;
+    color: #313238;
 
-    .description-item {
+    .item-label {
       display: flex;
-      line-height: 20px;
-      color: #313238;
+      flex-shrink: 0;
+      align-items: center;
+      margin-right: 4px;
+    }
 
-      .item-label {
+    .item-value-view {
+      display: flex;
+      align-items: center;
+
+      .icon-bianji {
+        flex-shrink: 0;
+        margin-right: 4px;
+        font-size: 20px;
+        color: #3a84ff;
+        cursor: pointer;
+      }
+    }
+
+    .item-value-edit {
+      display: flex;
+      flex: 1;
+      align-items: center;
+
+      /* stylelint-disable-next-line selector-class-pattern */
+      .bk-input--text {
+        color: #313238;
+      }
+
+      .operations {
         display: flex;
         flex-shrink: 0;
-        align-items: center;
-        margin-right: 4px;
-      }
+        column-gap: 4px;
+        margin-left: 2px;
 
-      .item-value-view {
-        display: flex;
-        align-items: center;
-      }
-
-      &.description-meaning {
-        min-height: 26px;
-
-        .item-value-edit {
-          display: flex;
-          flex: 1;
+        .icon-monitor {
+          display: inline-flex;
           align-items: center;
+          justify-content: center;
+          width: 22px;
+          height: 22px;
+          font-size: 20px;
+          cursor: pointer;
         }
 
-        .item-value-view {
-          .icon-bianji {
-            flex-shrink: 0;
-            margin-right: 4px;
-            font-size: 20px;
-            color: #3a84ff;
-            cursor: pointer;
-          }
+        .icon-mc-check-small {
+          color: #299e56;
         }
 
-        .item-value-edit {
-          .bk-input--text {
-            color: #313238;
-          }
-
-          .operations {
-            display: flex;
-            flex-shrink: 0;
-            column-gap: 4px;
-            margin-left: 2px;
-
-            .icon-monitor {
-              display: inline-flex;
-              align-items: center;
-              justify-content: center;
-              width: 22px;
-              height: 22px;
-              font-size: 20px;
-              cursor: pointer;
-              // background: #fafbfd;
-              // border: 1px solid #dcdee5;
-            }
-
-            .icon-mc-check-small {
-              color: #299e56;
-            }
-
-            .icon-mc-close {
-              color: #ea3636;
-            }
-          }
-        }
-      }
-
-      &.description-expression {
-        .item-value-view {
-          font-weight: 700;
-          color: #3a84ff;
+        .icon-mc-close {
+          color: #ea3636;
         }
       }
     }
-  }
-
-  .alert-content-cards {
-    margin-top: 8px;
   }
 }
