feat: 告警场景-指标配置预览及promql语法高亮预览组件开发 # Reviewed, transaction id: 57278

--- a/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-table/components/alert-content-detail/alert-content-detail.scss
+++ b/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-table/components/alert-content-detail/alert-content-detail.scss
@@ -69,4 +69,15 @@
       }
     }
   }
+
+  .alert-content-promql-view {
+    &.promql-viewer {
+      border: 0;
+
+      .monaco-editor {
+        --vscode-editor-background: #f5f7fa;
+        --vscode-editorGutter-background: #f5f7fa;
+      }
+    }
+  }
 }
