feat: APM站长工具自动解码逻辑优化 --Story=127271146 # Reviewed, transaction id: 57313

--- a/bkmonitor/webpack/src/monitor-static/icons/monitor-icons.css
+++ b/bkmonitor/webpack/src/monitor-static/icons/monitor-icons.css
@@ -1,3 +1,6 @@
+/* stylelint-disable selector-class-pattern */
+
+/* stylelint-disable font-family-no-missing-generic-family-keyword */
 @font-face {
   font-family: icon-monitor; /* Project id 1185924 */
   src:
@@ -15,7 +18,7 @@
 }
 
 .icon-mc-decode::before {
-  content: '\e845';
+  content: '\e846';
 }
 
 .icon-beizhu1::before {
