feat: 日志管理 - 采集接入重构-新建采集项静态

--- a/bklog/web/src/static/style.css
+++ b/bklog/web/src/static/style.css
@@ -761,3 +761,6 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bklog-group:before {
 	content: "\e233";
 }
+.bklog-caijixiafazhong:before {
+	content: "\e234";
+}
