--- a/bklog/web/src/views/manage-v2/log-collection/components/create-operation/index.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/create-operation/index.scss
@@ -179,7 +179,7 @@
             left: 0;
             top: 0;
           }
-          .bklog-expand-small {
+          .bklog-expand-small, .bklog-collapse-small {
             font-size: 20px;
             left: 0;
             top: -3px;
