--- a/bklog/web/src/views/manage-v2/log-collection/components/create-operation/step2-configuration.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/create-operation/step2-configuration.scss
@@ -2,9 +2,18 @@
   width: 100%;
   height: 100%;
   .base-info-form,
-  .link-config,
-  .source-log-info {
+  .link-config {
     width: 45%;
+  }
+  .source-log-info {
+    width: 100%;
+    .label-form-box {
+      width: 45%;
+    }
+    .large-width {
+      width: 70%;
+      min-width: 700px;
+    }
   }
   .label-form-box {
     .form-box {
@@ -26,6 +35,16 @@
           line-height: 26px;
           position: absolute;
           left: 20px;
+        }
+      }
+      .count-box {
+        font-size: 12px;
+        color: #7a7c85;
+        margin-left: 8px;
+        .font-blue {
+          color: #3a84ff;
+          font-weight: 600;
+          margin: 0 2px;
         }
       }
       .bk-button-group {
