feat: apm调用分析返回码增加重定义功能

--- a/bkmonitor/webpack/src/monitor-static/icons/monitor-icons.css
+++ b/bkmonitor/webpack/src/monitor-static/icons/monitor-icons.css
@@ -3,10 +3,9 @@
 /* stylelint-disable font-family-no-missing-generic-family-keyword */
 @font-face {
   font-family: icon-monitor; /* Project id 1185924 */
-  src:
-    url('monitor-icons.woff2?t=1751447220734') format('woff2'),
-    url('monitor-icons.woff?t=1751447220734') format('woff'),
-    url('monitor-icons.ttf?t=1751447220734') format('truetype');
+  src: url('monitor-icons.woff2?t=1757398485610') format('woff2'),
+       url('monitor-icons.woff?t=1757398485610') format('woff'),
+       url('monitor-icons.ttf?t=1757398485610') format('truetype');
 }
 
 .icon-monitor {
@@ -15,6 +14,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-beizhu1::before {
+  content: '\e844';
+}
+
+.icon-zhongdingyi::before {
+  content: '\e843';
+}
+
+.icon-File::before {
+  content: '\e842';
 }
 
 .icon-auto-decode::before {
