feat: APM调用分析返回码增加备注功能

--- a/bkmonitor/webpack/src/monitor-ui/chart-plugins/plugins/apm-service-caller-callee/components/code/code-redefine-slider.scss
+++ b/bkmonitor/webpack/src/monitor-ui/chart-plugins/plugins/apm-service-caller-callee/components/code/code-redefine-slider.scss
@@ -52,6 +52,16 @@
         }
       }
 
+      .skeleton-wrap {
+        .skeleton-element {
+          height: 150px;
+
+          &+.skeleton-element {
+            margin-top: 25px;
+          }
+        }
+      }
+
       .rule-row {
         height: 154px;
         background-color: #fff;
