--- a/bkmonitor/webpack/src/monitor-ui/chart-plugins/plugins/apm-service-caller-callee/components/multi-view-table.scss
+++ b/bkmonitor/webpack/src/monitor-ui/chart-plugins/plugins/apm-service-caller-callee/components/multi-view-table.scss
@@ -182,6 +182,11 @@
         text-overflow: ellipsis;
         white-space: nowrap;
       }
+
+      .remark-text {
+        margin-left: 8px;
+        color: #979BA5;
+      }
     }
 
     .block-link {
