--- a/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step3/field-list.scss
+++ b/bklog/web/src/views/manage-v2/log-collection/components/business-comp/step3/field-list.scss
@@ -1,29 +1,122 @@
 .field-list-main-box {
-    width: 100%;
-    .tab-box {
-        font-size: 12px;
-        color: #4d4f56;
-        display: flex;
-        .tab-list {
-          background: #f0f1f5;
-          border-radius: 2px;
-          padding: 4px;
-          height: 32px;
-          margin-right: 12px;
-          .tab-item {
-            display: inline-block;
-            padding: 4px 12px;
-            cursor: pointer;
-          }
-          .is-selected {
-            background: #ffffff;
-            border-radius: 2px;
-            color: #3a84ff;
-          }
+  width: 100%;
+  .tab-box {
+    font-size: 12px;
+    color: #4d4f56;
+    display: flex;
+    .tab-list {
+      background: #f0f1f5;
+      border-radius: 2px;
+      padding: 4px;
+      height: 32px;
+      margin-right: 12px;
+      .tab-item {
+        display: inline-block;
+        padding: 4px 12px;
+        cursor: pointer;
+      }
+      .is-selected {
+        background: #ffffff;
+        border-radius: 2px;
+        color: #3a84ff;
+      }
+    }
+  }
+  .add-btn {
+    font-size: 20px !important;
+    top: -3px !important;
+  }
+  .fields-table-box {
+    .overflow-tips-field-name {
+      display: flex;
+      height: 100%;
+      align-items: center;
+      padding: 0 15px;
+      background-color: rgb(250, 251, 253);
+      span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
+      .ext-btn {
+        font-size: 16px;
+      }
+    }
+    .bk-table-body-wrapper .fields-table-column {
+      background: #fafbfd;
+      .cell {
+        padding: 0 !important;
+      }
+      .bk-form-input {
+        border: none;
+        height: 42px;
+        line-height: 42px;
+      }
+      .bk-select {
+        background: #fff;
+        border: none;
+        height: 42px;
+        .bk-select-angle {
+          top: 11px;
+        }
+        &.is-disabled {
+          background: #fafbfd;
+        }
+        .bk-select-name {
+          height: 42px;
+          line-height: 42px;
         }
       }
-      .add-btn {
-        font-size: 20px !important;
-        top: -3px !important;
+    }
+    .source-box {
+      display: inline-block;
+      border-radius: 2px;
+      font-size: 12px;
+      padding: 2px 6px;
+    }
+    .source-built {
+      background: #f0f1f5;
+      color: #4d4f56;
+    }
+    .source-add {
+      background: #daf6e5;
+      color: #299e56;
+    }
+    .source-debug {
+      background: #e1ecff;
+      color: #3a84ff; 
+    }
+    .value-box {
+      display: inline-block;
+      width: 100%;
+      height: 42px;
+      line-height: 42px;
+      padding-left: 15px;
+      background: #fafbfd;
+      color: #4D4F56;
+    }
+    .disabled-work {
+      display: inline-block;
+      width: 100%;
+      height: 42px;
+      line-height: 42px;
+      background: #fafbfd;
+      cursor: not-allowed;
+      color: #c4c6cc;
+      padding-left: 15px;
+    }
+    .table-operation {
+      display: flex;
+      align-items: center;
+      .icons {
+        font-size: 16px;
+        cursor: pointer;
+        color: #3a84ff;
       }
+      .del-icon {
+        color: #ea3636;
+        margin-left: 12px;
+      }
+    }
+  }
 }
