--- a/bkmonitor/webpack/src/apm/pages/alarm-template/alarm-template.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/alarm-template.scss
@@ -1,12 +1,53 @@
 .alarm-template {
+  width: 100%;
+  height: 100%;
   padding: 12px;
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px 0 #1919290d;
 
   .alarm-template-header {
     display: flex;
+    flex-shrink: 0;
+    column-gap: 8px;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
 
     .alarm-template-header-operations {
       display: flex;
+      flex-shrink: 0;
       column-gap: 8px;
+
+      .alarm-template-header-filter-tab {
+        .common-status-wrap {
+          align-items: center;
+
+          .icon-monitor {
+            width: 14px;
+            height: 14px;
+            background: #fafbfd;
+            border-radius: 2px;
+
+            &.icon-neizhi {
+              color: #a3b1cc;
+            }
+
+            &.icon-kelong {
+              color: #a3c5fd;
+            }
+          }
+
+          .status-count {
+            line-height: 20px;
+            color: #4d4f56;
+          }
+        }
+      }
+    }
+
+    .alarm-template-header-search {
+      width: 836px;
     }
   }
 }
