feat: apm告警模板模板详情侧栏开发

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/template-details.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/template-details.scss
@@ -65,6 +65,11 @@
         }
       }
     }
-    
+
+    .tab-content {
+      .relation-service-alarm {
+        padding: 16px 40px;
+      }
+    }
   }
 }
