--- a/bkmonitor/webpack/src/apm/pages/alarm-template/alarm-template.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/alarm-template.scss
@@ -1,4 +1,7 @@
 .alarm-template {
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
   width: 100%;
   height: 100%;
   padding: 12px;
@@ -49,5 +52,11 @@
     .alarm-template-header-search {
       width: 836px;
     }
+  }
+
+  .alarm-template-main {
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
   }
 }
