--- a/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/common-form/edit-variable-value.scss
+++ b/bkmonitor/webpack/src/monitor-pc/pages/query-template/variables/components/common-form/edit-variable-value.scss
@@ -34,7 +34,7 @@
 
       .bk-select,.bk-form-input {
         box-sizing: border-box;
-        height: 32px;
+        min-height: 32px;
         border-color: #DCDEE5;
         border-radius: 0 2px 2px 0;
 
