--- a/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/template-push.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/template-operate/template-push.scss
@@ -30,18 +30,6 @@
     display: flex;
     flex-direction: column;
     min-height: calc(100vh - 100px);
-
-    .bk-tab-header {
-      float: none;
-      display: block;
-      border-top: 1px solid #fafbfd !important;
-    }
-
-    .bk-tab-section {
-      padding: 0;
-      border-bottom: none;
-    }
-
   }
 
   .template-push-footer {
@@ -49,6 +37,7 @@
     align-items: center;
     width: 100%;
     height: 48px;
+    padding-left: 24px;
     background: #FAFBFD;
     border-top: 1px solid #DCDEE5;
   }
